@@ -772,14 +772,23 @@ std::pair<OperationResult, bool> GraphOperations::validateEdgeContent(
 
   // check if vertex collections are part of the graph definition
   auto it = _graph.vertexCollections().find(fromCollectionName);
+
   if (it == _graph.vertexCollections().end()) {
-    // not found from vertex
-    return std::make_pair(OperationResult(TRI_ERROR_ARANGO_DATA_SOURCE_NOT_FOUND, options), true);
+    // not found _from vertex
+    return std::make_pair(
+        OperationResult(Result(TRI_ERROR_GRAPH_REFERENCED_VERTEX_COLLECTION_DOES_NOT_EXIST,
+                               "referenced _from collection: " + fromCollectionName + " does not exist."),
+                        options),
+        true);
   }
   it = _graph.vertexCollections().find(toCollectionName);
   if (it == _graph.vertexCollections().end()) {
-    // not found to vertex
-    return std::make_pair(OperationResult(TRI_ERROR_ARANGO_DATA_SOURCE_NOT_FOUND, options), true);
+    // not found _to vertex
+    return std::make_pair(OperationResult(Result(TRI_ERROR_GRAPH_REFERENCED_VERTEX_COLLECTION_DOES_NOT_EXIST,
+                                                 "referenced _to collection: " + toCollectionName +
+                                                     " does not exist."),
+                                          options),
+                          true);
   }
 
   return std::make_pair(OperationResult(TRI_ERROR_NO_ERROR, options), true);
