@@ -16,7 +16,7 @@ struct elsa<ErrorCode> {
 #include <frozen/unordered_map.h>
 
 namespace arangodb::error {
-constexpr static frozen::unordered_map<ErrorCode, const char*, 366> ErrorMessages = {
+constexpr static frozen::unordered_map<ErrorCode, const char*, 367> ErrorMessages = {
     {TRI_ERROR_NO_ERROR,  // 0
       "no error"},
     {TRI_ERROR_FAILED,  // 1
@@ -581,6 +581,8 @@ constexpr static frozen::unordered_map<ErrorCode, const char*, 366> ErrorMessage
       "initial collection is not allowed to be removed manually"},
     {TRI_ERROR_GRAPH_NO_INITIAL_COLLECTION,  // 1946
       "no valid initial collection found"},
+    {TRI_ERROR_GRAPH_REFERENCED_VERTEX_COLLECTION_DOES_NOT_EXIST,  // 1947
+      "referenced vertex collection does not exist"},
     {TRI_ERROR_SESSION_UNKNOWN,  // 1950
       "unknown session"},
     {TRI_ERROR_SESSION_EXPIRED,  // 1951
