@@ -1534,6 +1534,11 @@ constexpr auto TRI_ERROR_GRAPH_COLLECTION_IS_INITIAL                            
 /// replicationFactor mismatch was found.
 constexpr auto TRI_ERROR_GRAPH_NO_INITIAL_COLLECTION                             = ErrorCode{1946};
 
+/// 1947: ERROR_GRAPH_REFERENCED_VERTEX_COLLECTION_DOES_NOT_EXIST
+/// "referenced vertex collection does not exist"
+/// the specified referenced vertex collection does not exist.
+constexpr auto TRI_ERROR_GRAPH_REFERENCED_VERTEX_COLLECTION_DOES_NOT_EXIST       = ErrorCode{1947};
+
 /// 1950: ERROR_SESSION_UNKNOWN
 /// "unknown session"
 /// Will be raised when an invalid/unknown session id is passed to the server.
