@@ -364,8 +364,8 @@ describe('_api/gharial', () => {
             _to: 'persons/charlie'
           };
           let req = arango.POST(url + '/' + exampleGraphName + '/edge/knows', edgeDef);
-          expect(req.code).to.equal(404);
-          expect(req.errorNum).to.equal(ERRORS.ERROR_ARANGO_DATA_SOURCE_NOT_FOUND.code);
+          expect(req.code).to.equal(400);
+          expect(req.errorNum).to.equal(ERRORS.ERROR_GRAPH_REFERENCED_VERTEX_COLLECTION_DOES_NOT_EXIST.code);
 
           expect(db._collection(eName)).to.not.be.null;
           expect(db._collection(vName)).to.not.be.null;
@@ -442,8 +442,8 @@ describe('_api/gharial', () => {
             _to: 'xxx/charlie'
           };
           let req = arango.POST(url + '/' + exampleGraphName + '/edge/knows', edgeDef);
-          expect(req.code).to.equal(404);
-          expect(req.errorNum).to.equal(ERRORS.ERROR_ARANGO_DATA_SOURCE_NOT_FOUND.code);
+          expect(req.code).to.equal(400);
+          expect(req.errorNum).to.equal(ERRORS.ERROR_GRAPH_REFERENCED_VERTEX_COLLECTION_DOES_NOT_EXIST.code);
 
           expect(db._collection(eName)).to.not.be.null;
           expect(db._collection(vName)).to.not.be.null;
@@ -460,8 +460,8 @@ describe('_api/gharial', () => {
             _to: 'xxx/charlie'
           };
           let req = arango.POST(url + '/' + exampleGraphName + '/edge/knows', edgeDef);
-          expect(req.code).to.equal(404);
-          expect(req.errorNum).to.equal(ERRORS.ERROR_ARANGO_DATA_SOURCE_NOT_FOUND.code);
+          expect(req.code).to.equal(400);
+          expect(req.errorNum).to.equal(ERRORS.ERROR_GRAPH_REFERENCED_VERTEX_COLLECTION_DOES_NOT_EXIST.code);
 
           expect(db._collection(eName)).to.not.be.null;
           expect(db._collection(vName)).to.not.be.null;
@@ -604,7 +604,7 @@ describe('_api/gharial', () => {
           const _key = db.knows.any()._key;
           let req = arango.PATCH(url + '/' + exampleGraphName + '/edge/knows/' + _key, edgeDef);
           expect(req.code).to.equal(400);
-          expect(req.errorNum).to.equal(ERRORS.ERROR_ARANGO_DATA_SOURCE_NOT_FOUND.code);
+          expect(req.errorNum).to.equal(ERRORS.ERROR_GRAPH_REFERENCED_VERTEX_COLLECTION_DOES_NOT_EXIST.code);
 
           expect(db._collection(eName)).to.not.be.null;
           expect(db._collection(vName)).to.not.be.null;
@@ -625,7 +625,7 @@ describe('_api/gharial', () => {
           const _key = db.knows.any()._key;
           let req = arango.PATCH(url + '/' + exampleGraphName + '/edge/knows/' + _key, edgeDef);
           expect(req.code).to.equal(400);
-          expect(req.errorNum).to.equal(ERRORS.ERROR_ARANGO_DATA_SOURCE_NOT_FOUND.code);
+          expect(req.errorNum).to.equal(ERRORS.ERROR_GRAPH_REFERENCED_VERTEX_COLLECTION_DOES_NOT_EXIST.code);
 
           expect(db._collection(eName)).to.not.be.null;
           expect(db._collection(vName)).to.not.be.null;
@@ -854,7 +854,7 @@ describe('_api/gharial', () => {
           const _key = db.knows.any()._key;
           let req = arango.PUT(url + '/' + exampleGraphName + '/edge/knows/' + _key, edgeDef);
           expect(req.code).to.equal(400);
-          expect(req.errorNum).to.equal(ERRORS.ERROR_ARANGO_DATA_SOURCE_NOT_FOUND.code);
+          expect(req.errorNum).to.equal(ERRORS.ERROR_GRAPH_REFERENCED_VERTEX_COLLECTION_DOES_NOT_EXIST.code);
 
           expect(db._collection(eName)).to.not.be.null;
           expect(db._collection(vName)).to.not.be.null;
@@ -875,7 +875,7 @@ describe('_api/gharial', () => {
           const _key = db.knows.any()._key;
           let req = arango.PUT(url + '/' + exampleGraphName + '/edge/knows/' + _key, edgeDef);
           expect(req.code).to.equal(400);
-          expect(req.errorNum).to.equal(ERRORS.ERROR_ARANGO_DATA_SOURCE_NOT_FOUND.code);
+          expect(req.errorNum).to.equal(ERRORS.ERROR_GRAPH_REFERENCED_VERTEX_COLLECTION_DOES_NOT_EXIST.code);
 
           expect(db._collection(eName)).to.not.be.null;
           expect(db._collection(vName)).to.not.be.null;
@@ -1218,8 +1218,8 @@ describe('_api/gharial', () => {
           };
 
           let reqx = arango.POST(url + '/' + exampleGraphName + '/edge/' + eName, edgeLinkDef);
-          expect(reqx.code).to.equal(404);
-          expect(reqx.errorNum).to.equal(ERRORS.ERROR_ARANGO_DATA_SOURCE_NOT_FOUND.code);
+          expect(reqx.code).to.equal(400);
+          expect(reqx.errorNum).to.equal(ERRORS.ERROR_GRAPH_REFERENCED_VERTEX_COLLECTION_DOES_NOT_EXIST.code);
           expect(reqx.error).to.equal(true);
         });
       });
