@@ -1,6 +1,11 @@
 devel
 -----
 
+* Fixed issue BTS-309: The Graph API (Gharial) did not respond with the correct
+  HTTP status code when validating edges. It now responds with 400 (Bad Request)
+  as documented and a new, more precise error code (1947) and message if a vertex
+  collection referenced in the _from or _to attribute cannot be found.
+
 * Added `--shard` option to arangodump, so that dumps can be restricted to one or
   multiple shards only.
 
